2017-01-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert, _convert_element)
	(_process_text): Remove debugging statements.

2017-01-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Macro Details): Remove mention of a 
	difference between @comment and @c.

2017-01-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\endlineisspace): New.
	(\defmacro) <0 arguments> Skip any whitespace after the macro 
	name.
	(\scanmacro): Remove code for propagating a final @comment in
	a macro body.
	(\comment): Give the same definition as \c.

2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_set_state),
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs (xspara_new):
	Use an integer-valued SV to represent a paragraph formatting
	state instead of a blessed reference to an integer-valued SV.

2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Info.pm:  Remove usage of method call
	syntax when calling subroutines in the 
	Texinfo::Convert::Paragraph module.

2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/paragraph.t: Avoid using method call syntax to call 
	subroutines in Texinfo::Convert::Paragraph.  Only run each test 
	once.  Remove tests using 'lines_counter' value on paragraph 
	hash.

2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm:  Remove remaining usage
	of method call syntax when calling subroutines in the
	Texinfo::Convert::Paragraph module.

2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/Makefile.am,
	* tp/Texinfo/MiscXS/configure.ac: Remove code for using gnulib, 
	as it isn't required for this module, and this saves the 
	complication of having an extra gnulib checkout.
	* tp/Texinfo/MiscXS/lib,
	* tp/Texinfo/MiscXS/snippet: Remove all files.
	* tp/Texinfo/MiscXS/m4: Remove all gnulib files.

2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>
